# code-graph-rag

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  MIGRATION.md  Makefile  PLANNING.md  README.md  SETUP.md  project-instructions-setup.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: pre-commit.yml  tests.yml
codebase_rag/: config.py  graph_indexing.py  graph_updater.py  language_config.py  main.py  memory_optimizer.py  parallel_processor.py  parser_loader.py  progress_reporter.py  prompts.py  query_cache.py  query_templates.py
codebase_rag/analysis/: __init__.py  config.py  data_flow.py  dependencies.py  inheritance.py  security.py  test_coverage.py  vcs.py
codebase_rag/graph/: __init__.py  node_types.py
codebase_rag/parsers/: __init__.py  bdd_parser.py  c_kernel_analyzer.py  c_parser.py  c_pointer_analyzer.py  config_parser.py  test_detector.py  test_parser.py
codebase_rag/processing/: __init__.py  parallel_processor.py
codebase_rag/services/: llm.py
codebase_rag/tests/: test_c_advanced_features.py  test_c_parser.py  test_c_parser_advanced.py  test_config_analysis.py  test_config_parser.py  test_data_flow_analysis.py  test_data_flow_integration.py  test_dependency_analysis.py  test_git_analyzer.py  test_graph_indexing.py  test_graph_updater_integration.py  test_inheritance_analysis.py  test_kernel_concurrency.py  test_kernel_modules.py  test_kernel_syscalls.py  test_memory_optimization.py  test_parallel_processing.py  test_parallel_processing_simple.py  test_pointer_analysis_enhanced.py  test_provider_detection.py  test_query_cache.py  test_security_analysis.py  test_sprint3_integration.py  test_sprint3_simple.py  test_test_coverage.py  test_test_parsing.py  test_vcs_analysis.py
codebase_rag/tests/fixtures/: TestCalculator.java  calculator.feature  calculator_ginkgo_test.go  calculator_test.go  test_c_unity.c  test_calculator.rs  test_javascript.test.js  test_python_example.py
codebase_rag/tests/fixtures/c_samples/: hello.c  kernel_example.c  math_utils.h  pointer_test.c  structs.c
codebase_rag/utils/: __init__.py  ast_helpers.py
codebase_rag/version_control/: __init__.py  git_analyzer.py
docs/: ADVANCED_FEATURES.md  ADVANCED_USAGE.md  CODE_QUALITY.md  CODE_QUALITY_SPRINT_INTEGRATION.md  QUALITY_QUICK_REFERENCE.md  QUERY_COOKBOOK.md
examples/: c_and_test_analysis_example.py  comprehensive_analysis_example.py  kernel_analysis_example.py  large_codebase_example.py  large_scale_management.py  mcp_demo.py  multi_repo_analysis.py  performance_benchmark.py  security_and_test_example.py  vcs_and_config_example.py
mcp_server/: README.md  __init__.py  client_example.py  launch.sh  mcp_config.json  requirements.txt  security.py  server.py  tools.py
scripts/: check-code-quality.sh
tests/: test_mcp_security.py  test_mcp_server.py
